# funpy

./: .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
funpy/: __init__.py  memoize.py  report.py  result_cache.py
funpy/joblib/: __init__.py  _utils.py  backports.py  numpy_pickle.py
funpy/joblib/_change/: README.md  __init__.py  compressor.py  hashing.py  memory.py  numpy_pickle.py  numpy_pickle_utils.py
tests/: _test_common.py  conftest.py  prepare_test_data.sh  test_joblib.py  test_memoize.py  test_memoize_recursion.py  test_result_cache.py
tests/joblib/: _test_common.py  test_backports.py  test_disk.py  test_func_inspect.py  test_hashing.py  test_init.py  test_logger.py  test_memory.py  test_memory_async.py  test_missing_multiprocessing.py  test_module.py  test_numpy_pickle.py  test_numpy_pickle_compat.py  test_numpy_pickle_utils.py  test_store_backends.py  test_testing.py  test_utils.py
tests/joblib/_test_data/: create_numpy_pickle.py  generate_data.sh
